--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@chec/commerce.js": "^2.4.1",
     "@contentful/app-sdk": "^3.33.0",
     "@contentful/field-editor-single-line": "^0.14.1",
     "@contentful/field-editor-test-utils": "^0.11.1",
